Fixed bug of main div with blank white space

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ main {
     #edd0f3,
     #ffffff
   );
-  height: 100%;
+  /* height: 100%; */
 }
 
 .lagayan-ng-kard {
@@ -106,7 +106,7 @@ footer {
   color: white;
   text-align: center;
   font-size: 1rem;
-  padding: 1rem;
+  padding: 0.5rem;
   position: fixed;
   bottom: 0;
   z-index: 1;
